Added lab5, changed hosts file for that matter

--- a/lab1-2.yml
+++ b/lab1-2.yml
@@ -6,7 +6,7 @@
   - name: add loopback interface, lab01.
     nclu:
       commands:
-      - add loopback lo ip address {{ lbi }}
+      - add loopback lo ip address {{ lbi }}/32
       atomic: true
   
   - name: add bond between switches - lab02.
